--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "dependencies": {
         "@fullcalendar/core": "^6.1.17",
         "@fullcalendar/daygrid": "^6.1.17",
-        "fullcalendar": "^6.1.17"
+        "@fullcalendar/interaction": "^6.1.17",
+        "@fullcalendar/list": "^6.1.17",
+        "@fullcalendar/moment": "^6.1.17",
+        "@fullcalendar/moment-timezone": "^6.1.17",
+        "@fullcalendar/timegrid": "^6.1.17"
     }
 }
